# PexelManager

./: .gitignore  CMakeLists.txt  README.md  categories.json  claude.md  migrate-s3.ps1
src/: downloadmanager.cpp  downloadmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  medialistwidget.cpp  medialistwidget.h  mediametadata.h  pexelsapi.cpp  pexelsapi.h  projectmanager.cpp  projectmanager.h  settings.cpp  settings.h  uploadmanager.cpp  uploadmanager.h  videolistwidget.cpp  videolistwidget.h  videometadata.h  videoplayerwidget.cpp  videoplayerwidget.h
